<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 

    >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:id="@+id/layout1"
        >
         <EditText 
        android:id="@+id/tv1"
        android:layout_width="fill_parent"
   		android:layout_height="fill_parent"
   		android:text="@string/tv1"
   		android:textSize="30sp"
   		android:textColor="#FFF"
   		android:gravity="bottom"
   		android:singleLine="true"
   		android:background="@null"
   		android:layout_margin="5px"
        />
        
    </LinearLayout>
   
    
    <LinearLayout
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/layout2"
        >
        	<Button 
        	android:id="@+id/btn01"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_01"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
        		/>

        	<Button
        	    android:id="@+id/btn021"
        	    android:layout_width="fill_parent"
        	    android:layout_height="fill_parent"
        	    android:text="@string/btn_021"
        	    android:width="57px" 
        	    android:background="@drawable/darkgray_button_style"/>

        	<Button
        	    android:id="@+id/btn022"
        	    android:layout_width="fill_parent"
        	    android:layout_height="fill_parent"
        	    android:text="@string/btn_022"
        	    android:width="57px" 
        	    android:background="@drawable/darkgray_button_style"
        	    />

        	<Button 
        	android:id="@+id/btn03"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_03"
       		android:width="114px"
       		android:background="@drawable/red_button_style"
       		android:textColor="#FFF"
       			/>
        	<Button 
        	android:id="@+id/btn04"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_04"
       		android:width="114px"
       		android:background="@drawable/red_button_style"
       		android:textColor="#FFF"
        		/>
        	<Button 
        	android:id="@+id/btn05"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_05"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn06"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_06"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn07"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_07"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
       			/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:id="@+id/layout3"
        >
        	<Button 
        	android:id="@+id/btn11"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_11"
       		android:width="114px"
       		android:background="@drawable/lightgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn12"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_12"
       		android:width="114px"
       		android:background="@drawable/lightgray_button_style"
        		/>

        	<Button
        	    android:id="@+id/btn13"
        	    android:layout_width="fill_parent"
        	    android:layout_height="fill_parent"
        	    android:text="@string/btn_13"
        	    android:width="114px"
        	    android:background="@drawable/lightgray_button_style" />

        	<Button 
        	android:id="@+id/btn14"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_14"
       		android:width="114px"
       		android:background="@drawable/orange_button_style"
       		android:textColor="#FFF"
        		/>
        	<Button 
        	android:id="@+id/btn15"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_15"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn16"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_16"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn17"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_17"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
       			/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:orientation="horizontal"
         android:layout_gravity="center"
         android:layout_weight="1"
         android:id="@+id/layout4"
        >
        	<Button 
        	android:id="@+id/btn21"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_21"
       		android:width="114px"
       		android:background="@drawable/lightgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn22"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_22"
       		android:width="114px"
       		android:background="@drawable/lightgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn23"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_23"
       		android:width="114px"
       		android:background="@drawable/lightgray_button_style"
       			/>
        	<Button 
        	android:id="@+id/btn24"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_24"
       		android:width="114px"
       		android:background="@drawable/orange_button_style"
       		android:textColor="#FFF"
        		/>
        	<Button 
        	android:id="@+id/btn25"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_25"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn26"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_26"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn27"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_27"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
       			/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:id="@+id/layout5"
        >
        	<Button 
        	android:id="@+id/btn31"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_31"
       		android:width="114px"
       		android:background="@drawable/lightgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn32"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_32"
       		android:width="114px"
       		android:background="@drawable/lightgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn33"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_33"
       		android:width="114px"
       		android:background="@drawable/lightgray_button_style"
       			/>
        	<Button 
        	android:id="@+id/btn34"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_34"
       		android:width="114px"
       		android:background="@drawable/orange_button_style"
       		android:textColor="#FFF"
        		/>
        	<Button 
        	android:id="@+id/btn35"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_35"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn36"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_36"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn37"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_37"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
       			/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:id="@+id/layout6"
        android:background="@drawable/bottom_layout_stoke"
        >
        	<Button 
        	android:id="@+id/btn41"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_41"
       		android:width="114px"
       		android:background="@drawable/lightgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn42"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_42"
       		android:width="114px"
       		android:background="@drawable/lightgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn43"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_43"
       		android:width="114px"
       		android:background="@drawable/orange_button_style"
       		android:textColor="#FFF"
       			/>
        	<Button 
        	android:id="@+id/btn44"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_44"
       		android:width="114px"
       		android:background="@drawable/orange_button_style"
       		android:textColor="#FFF"
        		/>
        	<Button 
        	android:id="@+id/btn45"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_45"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn46"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_46"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
        		/>
        	<Button 
        	android:id="@+id/btn47"
       	 	android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:text="@string/btn_47"
       		android:width="114px"
       		android:background="@drawable/darkgray_button_style"
       			/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:id="@+id/layout7"
        >

        	<Button 
        	    android:id="@+id/btncal"
       	 		android:layout_width="wrap_content"
       			android:layout_height="fill_parent"
       			android:text="@string/btn_cal"
       			android:width="228px"
       			android:background="@drawable/draw_button_style"
       		android:textColor="#FFF"
           	 />
    </LinearLayout>
</LinearLayout>